--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>src.main.java.HelloWorldApplication</mainClass>
+                                    <mainClass>HelloWorldApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
