--- a/hello-world.yml
+++ b/hello-world.yml
@@ -1,2 +1,19 @@
 template: Hello, %s!
 defaultName: Stranger
+database:
+  driverClass: org.postgresql.Driver
+  user: postgres
+  password: docker
+  url: jdbc:postgresql://localhost:5432/postgres
+  properties:
+    charSet: UTF-8
+  maxWaitForConnection: 1s
+  validationQuery: "/* MyService Health Check */ SELECT 1"
+  validationQueryTimeout: 3s
+  minSize: 8
+  maxSize: 32
+  checkConnectionWhileIdle: false
+  # the amount of time to sleep between runs of the idle connection validation, abandoned cleaner and idle pool resizing
+  evictionInterval: 10s
+  # the minimum amount of time an connection must sit idle in the pool before it is eligible for eviction
+  minIdleTime: 1 minute
